syntax = "proto3";

option csharp_namespace = "FriendBook.IdentityServer.API.BLL.gRPCClients.ContactService";

package ContactService;
import "Google/API/annotations.proto";

service PublicContact
{
  rpc GetProfiles (RequestUserLogin) returns (ResponseProfiles){
  option (google.api.http) =
   {
    get: "/v1/ContactService/GetProfiles"
   };
  }
}

message RequestUserLogin
{
  string Login = 1;
}

message Profile {
  string Login = 1;
  string FullName = 2;
  string Id = 3;
}

message ResponseProfiles
{
  repeated Profile profiles = 1;
}
